User controller refined
